--- a/api/api.csproj
+++ b/api/api.csproj
@@ -1,21 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
+    <OutputType>Exe</OutputType>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.6.0" />
-    <PackageReference Include="Azure.Storage.Queues" Version="12.20.0" />
+    <!-- 🔥 BẮT BUỘC cho C# isolated -->
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk"
+                      Version="1.17.0"
+                      OutputItemType="Analyzer" />
+
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.21.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.2.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="host.json">
+
+    <PackageReference Include="Azure.Storage.Queues" Version="12.20.0" />
+    <None Include="data\**\*.*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="local.settings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
   </ItemGroup>
+
 </Project>
